# featree

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-release.yml
examples/: mini.py
featree/: __init__.py  config.py  llm.py  relation.py  tree.py
