[tool.poetry]
name = "featree"
version = "0.1.7"
description = ""
authors = ["williamfzc <178894043@qq.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "featree" }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.2"
numpy = "^1.26.4"
networkx = "^3.2.1"
pandas = "^2.2.2"
python-louvain = "^0.16"
treelib = "^1.7.0"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
loguru = "^0.7.2"
tqdm = "^4.66.4"
ollama = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
